# webextplaygrand

demo02/: Cargo.toml  background.js  build.ps1  build.sh  manifest_v2.json  manifest_v3.json
demo02/src/: lib.rs
