[package]
name = "demo02"
version = "0.1.0"
authors = ["tieway59 <tieway59@foxmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
web-extensions-sys = "0.4.1"
web-extensions = "0.3.0"
percent-encoding = "2.3.1"
chrono = "0.4.38"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "History"]
